apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'com.google.protobuf'

// Inform IntelliJ projects about the generated code.
apply plugin: 'idea'

group = 'org.epl.proto'
version = '2.2.3'

description = """proto lib."""

sourceCompatibility = 1.9
targetCompatibility = 1.9
// https://stackoverflow.com/questions/18689365/how-to-add-xlintunchecked-to-my-android-gradle-based-project
// https://stackoverflow.com/a/34452265/445372
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll([
            "-Xlint:unchecked",
            "-Xlint:deprecation",
            "--add-exports",
            "java.base/jdk.internal.misc=ALL-UNNAMED"
    ])
}

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
    }
}

//repositories {
//    maven { // The google mirror is less flaky than mavenCentral()
//        url "https://maven-central.storage-download.googleapis.com/maven2/" }
//    mavenCentral()
//    mavenLocal()
//}

repositories {
    mavenCentral()
}

// IMPORTANT: You probably want the non-SNAPSHOT version of gRPC. Make sure you
// are looking at a tagged version of the example and not "master"!

// Feel free to delete the comment at the next line. It is just for safely
// updating the version in our release process.
def grpcVersion = '1.45.0' // CURRENT_GRPC_VERSION
def protobufVersion = '3.19.3'

dependencies {
    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
    implementation "io.grpc:grpc-stub:${grpcVersion}"
    implementation "io.grpc:grpc-core:${grpcVersion}"

    compile "io.fabric8:kubernetes-client:2.0.5"
    compile 'javax.annotation:javax.annotation-api:1.3.2'

//    compile files('/usr/local/lib/proj.jar')
//    compile project(':epl-geometry-api')
//    compile project(':epl-geometry-api-ex')
//    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.9.6'

    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
    runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"

    // https://github.com/grpc/grpc-java/issues/3633#issuecomment-340553225
    compile 'javax.annotation:javax.annotation-api:1.3.2'

//    testCompile group: 'org.json', name: 'json', version:'20170516'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "org.mockito:mockito-core:1.9.5"
}

// protobuf {
//     protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
//     plugins {
//         grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
//     }
//     generateProtoTasks {
//         all()*.plugins { grpc {} }
//     }
// }



task copyToLib(type: Copy) {
    into "$buildDir/libs"
    from configurations.runtime
}

build.dependsOn(copyToLib)
